# loci-publish

./: .gitignore  .mcp.json  CODEOWNERS  DPA.md  LICENSE AGREEMENT.md  PORTAL.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt  revert_eval_changes.sh  run_evals.sh  run_tests.sh  usage-examples.md
.agents/: plugin.json
.claude-plugin/: marketplace.json  plugin.json
.github/hooks/: loci.json
agents/: bug-report.agent.md  control-flow.agent.md  exec-trace.agent.md  help.agent.md  init.agent.md  loci-plan.agent.md  loci-post-edit.agent.md  loci-preflight.md  memory-report.agent.md  stack-depth.agent.md  trends.agent.md
agents/control-flow/: SKILL.md
agents/exec-trace/: SKILL.md
agents/help/: SKILL.md
agents/memory-report/: SKILL.md
agents/stack-depth/: SKILL.md
agents/trends/: SKILL.md
authorization-flow/: loci-authorization-flow.md
hooks/: find-venv-python.sh  hooks.json  post_edit_reminder.py  preflight_check.py  session-init.sh
lib/: api_client.py  asm_analyze.py  build_metadata.py  detect-project.sh  extract_and_time.py  generate-summary.sh  loci_bridge.py  loci_log.py  loci_log.sh  loci_stats.py  task_tracker.py
lib/flag_sources/: __init__.py  build_root.py  compile_commands.py  compiler_match.py  flags_normalize.py  gmake_dryrun.py  linked_elf_dwarf.py  makefile_regex.py  projectspec_xml.py  response_file.py  same_stem_dwarf.py  sibling_obj_dwarf.py  stdlib_headers.py  user_override.py
setup/: setup.sh
setup/stubs/: resource.py
skills/bug-report/: SKILL.md
tests/: bootstrap_venv.py  conftest.py
(+67 files in other folders)
